--- a/style.css
+++ b/style.css
@@ -58,6 +58,7 @@ main
 {
 	display: block;
 	cursor: pointer;
+	transition: ease-in 0.5s;
 }
 .box-text a 
 {
@@ -71,6 +72,7 @@ main
 .box-text a:hover 
 {
 	color: hsl(178, 100%, 50%);
+	transition: all ease-in 0.5s;
 }
 p
 {
@@ -127,4 +129,15 @@ hr
 .autor a:hover
 {
 	color: hsl(178, 100%, 50%);
+	transition: all ease-in 0.5s;
+}
+@media (max-width: 350px) {
+
+	.flex {
+    	display: flex;
+    	justify-content: space-between;
+    	padding: 20px 0;
+    	flex-direction: column;
+    	align-items: center;
+		}
 }
